# otel_agentv1

./: .gitignore  CODEBASE_ANALYSIS.md  DATA_STORAGE_FLOW.md  LOKI_LOG_QUERIES.md  START_SYSTEM.md  STORAGE_AND_ENDPOINTS.md  check_email_alerts.py  check_observability.py  check_traces.py  observability_details.py  package-lock.json  show_metrics.py  test_trace.py  trace_analysis_report.py  trace_metrics.py  verify-system.ps1  verify_system.py
.claude/: settings.local.json
Grafana_stackv1/: alloy-values.yaml  grafana-values.yaml  loki-values.yaml  prometheus-values.yaml  run.md  tempo-values.yaml
otel-monitor/: .env.local  ALERTING.md  README.md  package-lock.json  package.json  tailwind.config.js  test-send-alert.js  tsconfig.tsbuildinfo
otel_agent/: 2026-04-12-205734-this-session-is-being-continued-from-a-previous-c.txt  TRACING_GUIDE.md  agent.py  agent_api.py  agent_auto.py  agent_auto_multiple.py  mcp_tool_instrumented.py  otel_setup.py  (+1 more)
wd-otel-core/: pyproject.toml
wd-otel-core/examples/: wd-otel.production.yaml  wd-otel.yaml
wd-otel-core/tests/: conftest.py  test_config.py  test_errors.py  test_helpers.py  test_init.py  test_setup.py
wd-otel-core/wd_otel/: __init__.py  config.py  errors.py  helpers.py  setup.py
wd-otel-mcp/: pyproject.toml
wd-otel-mcp/tests/: conftest.py  test_context.py  test_decorator.py
wd-otel-mcp/wd_otel_mcp/: __init__.py  decorator.py
wd-otel-orchestrator/: pyproject.toml
wd-otel-orchestrator/tests/: conftest.py  test_base.py  test_transitions.py
wd-otel-orchestrator/wd_otel_orchestrator/: __init__.py  base.py
(+52 files in other folders)
